--- a/src/components/add/add.module.scss
+++ b/src/components/add/add.module.scss
@@ -6,3 +6,48 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(91, 90, 90, 0.1);
 }
+
+form{
+    display: flex;
+    flex-direction: column;
+   
+   width: 60%;
+   margin: 10px auto;
+
+   .Inputbox{
+      text-align: left;
+      color: #1D285E;
+      font-size: 30px;
+   
+      input{
+          margin-top: 30px;
+          width: 100%;
+          outline: none;
+          border: none;
+          padding: 3px;
+          border-bottom: 1px #1D285E solid; 
+          font-size: 18px;
+      }
+     
+     
+   }
+   input[type="submit"]{
+    margin: 30px auto;
+    padding: 8px 8px;
+    background: #ED6A5A;
+    border: none;
+    width: 50%;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 1s;
+    box-shadow: 0 8px 16px 0 rgba(237, 106, 90, 0.5);
+    font-size: 16px;
+}
+input[type="submit"]:hover{
+    box-shadow: none;
+    
+}
+
+}
