--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right top, rgba(155, 193, 188, .2), rgba(237, 106, 90, .1));
+  background-size: cover;
+  height: 100vh;
+  background-repeat: no-repeat;
 }
 
 code {
