--- a/src/components/list/list.module.scss
+++ b/src/components/list/list.module.scss
@@ -1,26 +1,12 @@
 .List{
     width: 90%;
-    height: 430px;
+    height: 570px;
     margin: auto;
-    background: #fff;
+    //background: #fff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(91, 90, 90, 0.1);
-   overflow: auto;
+    //box-shadow: 0 4px 8px 0 rgba(91, 90, 90, 0.1);
+   //overflow: auto;
    margin-top: 20px;
   
 }
 
-::-webkit-scrollbar {
-    width: 5px;
-
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgb(220, 219, 219); 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(187, 187, 187); 
-  }
