--- a/src/components/list/list.module.scss
+++ b/src/components/list/list.module.scss
@@ -1,6 +1,6 @@
 .List{
     width: 90%;
-    height: 570px;
+    height: auto;
     margin: auto;
     //background: #fff;
     border-radius: 10px;
